--- a/VisualGGPK2/VisualGGPK2.csproj
+++ b/VisualGGPK2/VisualGGPK2.csproj
@@ -14,6 +14,7 @@
     <DebugType>embedded</DebugType>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <ApplicationIcon>Assets\silver_cube.ico</ApplicationIcon>
+    <StartupObject>VisualGGPK2.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
