--- a/VisualGGPK2/App.config
+++ b/VisualGGPK2/App.config
@@ -22,6 +22,9 @@
             <setting name="tencentPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="epicPath" serializeAs="String">
+                <value />
+            </setting>
         </VisualGGPK2.Properties.Settings>
     </userSettings>
 </configuration>
