--- a/VisualGGPK2/Properties/Settings.settings
+++ b/VisualGGPK2/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="tencentPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="epicPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
