--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-["https://www.paypal.me/vmvPaLPaY", paypal.com]
+['https://www.paypal.me/vmvPaLPaY', www.paypal.com]
